# hh-timer-gtk

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  ROADMAP.md  WHISHLIST.md  url.md
doc/: about.txt  url.txt
glade/: home.glade
src/: main.cc  main.cpp  timer.cc  timer.h  window.cc  window.h  worker.cc  worker.h
